修改新增商品样式

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -13,3 +13,8 @@ html, body, #app {
 #nprogress .spinner {
     z-index: 15031;
 }
+
+/* 修改elementui message消息框为居中 */
+/deep/ .el-message--error {
+    justify-content: center;
+}
