--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -15,6 +15,6 @@ html, body, #app {
 }
 
 /* 修改elementui message消息框为居中 */
-/deep/ .el-message--error {
+/deep/ .el-message__icon .el-icon-error {
     justify-content: center;
 }
