--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -19,7 +19,8 @@ html, body, #app {
     justify-content: center;
 }
 
+/*
 .el-form-item__content .el-input__inner {
     height: 35px;
     width: 190px;
-}
+}*/
