修改保存和树结构的样式

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -24,3 +24,8 @@ html, body, #app {
     height: 35px;
     width: 190px;
 }*/
+
+/* 提示信息居中 */
+.el-message {
+    justify-content: center !important;
+}
